adding dids view
